# learn_iocp

./: .clangd  .gitignore  CMakeLists.txt
src/: defer.hpp
src/client/: client.cpp
src/iocp/: accept_manager.hpp  client_state.cpp  client_state.hpp  iocp.cpp  iocp.hpp  server_state.cpp  server_state.hpp
src/manager/: accept_manager.cpp  accept_manager.hpp  client_manager.cpp  client_manager.hpp  server_manager.cpp  server_manager.hpp
src/server/: server.cpp
